# Peking-University-Family-Canteen-Simulator

./: .gitignore  README.md  pku_simulator.spec  pyproject.toml  run_qt.py
assets/: README.md  SCENE_INDEX.md
pku_simulator/: README.md  pku_simulator.pyproject
pku_simulator/assets/: asset_positions.json
pku_simulator/scripts/: build_executable.sh  generate_asset_placeholders.py
pku_simulator/src/pku_simulator/: app.py  layout_editor.py  qt_app.py  qt_app_navigation.py  qt_asset_policies.py  qt_defs.py  qt_order_taunts.py  qt_overlays_start_shop.py  qt_overlays_workbench.py  qt_pages.py  qt_window_balance.py  qt_workbench_cheung_fun.py  qt_workbench_drops.py  qt_workbench_griddle.py  qt_workbench_staple.py  qt_workbench_tabs.py
pku_simulator/src/pku_simulator/core/: catalog.py
pku_simulator/src/pku_simulator/services/: __init__.py
scripts/: open_macos_app.sh
src/pku_simulator/: __init__.py  main.py  qt_audio.py  qt_click_router.py  qt_counter_controller.py  qt_overlays.py  qt_overlays_counter.py  qt_pages_flow.py  qt_pages_workbench.py  qt_scene.py  qt_scene_drag.py  qt_scene_drawing.py  qt_shop_controller.py  qt_workbench_bbq.py
src/pku_simulator/core/: __init__.py  config.py  inventory.py  models.py  save_repo.py
src/pku_simulator/services/: game_service.py
