[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pku-simulator"
version = "0.1.0"
description = "PKU canteen cooking game scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7,<7.0",
]

[project.scripts]
pku-simulator = "pku_simulator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
